--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,3 +6,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@layer components {
+  .btn-green {
+    @apply bg-green-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-green-800 transform transition duration-150 hover:shadow-xl hover:translate-x-2 focus:ring-2 focus:ring-green-600 focus:ring-offset-2;
+  }
+  .btn-blue {
+    @apply bg-blue-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-blue-800 transform transition duration-150 hover:shadow-xl hover:translate-x-2 focus:ring-2 focus:ring-blue-600 focus:ring-offset-2;
+  }
+  .btn-red {
+    @apply bg-red-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-red-800 transform transition duration-150 hover:shadow-xl hover:translate-x-2 focus:ring-2 focus:ring-red-600 focus:ring-offset-2;
+  }
+}
