--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -15,6 +15,6 @@
     @apply bg-blue-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-blue-800 transform transition duration-150 hover:shadow-xl hover:translate-x-2 focus:ring-2 focus:ring-blue-600 focus:ring-offset-2;
   }
   .btn-red {
-    @apply bg-red-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-red-800 transform transition duration-150 hover:shadow-xl hover:translate-x-2 focus:ring-2 focus:ring-red-600 focus:ring-offset-2;
+    @apply bg-red-600 p-2 text-white rounded-t-lg rounded-b-sm shadow-md outline-none border-none hover:bg-red-800 transform transition duration-150 hover:shadow-xl hover:-translate-x-2 focus:ring-2 focus:ring-red-600 focus:ring-offset-2;
   }
 }
